--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/animations": "^19.0.0",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
+    "@angular/core": "^19.1.3",
     "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser": "^19.1.3",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@capacitor/app": "7.0.0",
@@ -26,9 +26,11 @@
     "@capacitor/haptics": "7.0.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
-    "@ionic/angular": "^8.0.0",
-    "ionicons": "^7.0.0",
+    "@ionic/angular": "^8.4.2",
+    "animate.css": "^4.1.1",
+    "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
